# kingdom-come

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  COMPETITIVE-UX.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  PLAN-REDESIGN.md  README.md  ROADMAP.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  run.sh
.claude-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-image.yml  publish-pypi.yml
backend/: __init__.py  app.py  cli.py
backend/api/: ws_chat.py  ws_copilot.py
backend/db/: connection.py
backend/fixtures/: cohort.py
backend/models/: ledger.py  outcome.py
backend/services/: ai_pipeline.py  copilot.py  curriculum.py  event_engine.py  journey.py  llm_client.py  orchestration.py  prayer.py  predictive.py  prompt_builder.py  pulse.py  realtime.py  stt.py  vector_memory.py
docs/: AGENTS.md  ARCHITECTURE.md  DEPLOY.md  HOW-TO-USE.md  PRAYER.md  V7_FEATURES.md  WHAT-IT-IS.md
docs/plans/: 10X-PLAN.md
docs/superpowers/plans/: 2026-05-05-public-ui-e2e.md
frontend/: _base.html  app.js  chat.css  chat.html  chat.js  cohort_data.js  cohort_groups.css  cohort_groups.html  cohort_groups.js  cohort_overview.css  cohort_overview.html  cohort_overview.js  cohort_risk.js  cohort_triage.html  components.css  copilot.css  copilot.js  door.css  door.html  index.html  manifest.json  me.css  me.html  me.js  prayer.css  prayer.html  prayer.js  profile.css  profile.js  status.js  student_profile.html  styles.css  sw.js  timeline.css  timeline.html  timeline.js  tokens.css  tour.js  triage.css  triage.js  (+4 more)
mcp_server/: __init__.py  server.py
skills/cohort-triage/: SKILL.md
skills/morning-check-in/: SKILL.md
skills/prayer-ledger/: SKILL.md
tests/: test_a11y.py  test_ai_pipeline.py  test_app.py  test_cohort_endpoints.py  test_cohort_import.py  test_copilot.py  test_e2e.py  test_e2e_kc.py  test_journey_pulse.py  test_llm_client.py  test_memory_api.py  test_prayer.py  test_prayer_persistence.py  test_realtime.py  test_routes.py  test_services.py  test_ui.py  test_vector_memory.py  test_voice_api.py  test_ws_chat.py
