[project]
name = "seminary-formation-platform"
version = "0.7.0"
description = "V7 backend for predictive formation, adaptive curriculum, outcomes, and class orchestration."
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.7",
    "fastapi>=0.111",
    "jinja2>=3.1",
    "numpy>=1.26",
    "openai>=1.40",
    "pydantic>=2",
    "redis>=5",
    "sqlalchemy>=2",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "fakeredis>=2.20",
    "httpx>=0.27",
    "playwright>=1.45",
    "pytest>=8",
    "pytest-playwright>=0.5",
]
mcp = [
    "httpx>=0.27",
    "mcp>=1.0",
    "websockets>=12",
]

[project.scripts]
kingdom-come-mcp = "mcp_server.server:main"

[tool.setuptools.packages.find]
include = ["backend*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
