[project]
name = "kingdom-come"
version = "0.9.0"
description = "V7 backend for predictive formation, adaptive curriculum, outcomes, and class orchestration."
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.7",
    "fastapi>=0.111",
    "jinja2>=3.1",
    "numpy>=1.26",
    "openai>=1.40",
    "pydantic>=2",
    "redis>=5",
    "sqlalchemy>=2",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "fakeredis>=2.20",
    "httpx>=0.27",
    "playwright>=1.45",
    "pytest>=8",
    "pytest-playwright>=0.5",
]
mcp = [
    "httpx>=0.27",
    "mcp>=1.0",
    "websockets>=12",
]
# Container/hosted deployments with no external Redis: realtime.py falls
# back to fakeredis when REDIS_URL is unset, so the image must ship it.
standalone = [
    "fakeredis>=2.20",
]

[project.scripts]
kingdom-come = "backend.cli:main"
kingdom-come-mcp = "mcp_server.server:main"

# Ship the frontend (templates + static assets) inside the wheel as a
# `frontend` package so `uvx kingdom-come` works with no checkout — app.py
# falls back to importlib.resources when the repo layout isn't present.
[tool.setuptools.packages.find]
include = ["backend*", "mcp_server*", "frontend"]

[tool.setuptools.package-data]
frontend = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
